Last change before shabbos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
       <h1>Welcome to the temporary home of the ABL.</h1>
-      Please register and pay here.
+      <div class="registerMessage">
+        Please register and pay here.
+      </div>
       <iframe src="https://docs.google.com/forms/d/1BT0AqM73yR-pg47nbgkCAnU0aYlMX0IqxppQtd_kwMY/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </body>
 </html>
