--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,13 +8,17 @@
   <body>
       <div class="container-fluid">
         <p>
-          This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
+          <h2>
+              This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
+          </h2>
         </p>
         <p>
-          We hope to have the first games on Sunday, October 25th. <br>
-          Games are almost every Sunday night for approximately 16 weeks with a two or three week playoff round to determine a champion. <br>
-          Games are played at either Hillel Torah or Fairview Middle School in Skokie.  <br>
-          There is one 10 O'clock game each week.
+
+            We hope to have the first games on Sunday, October 25th. <br>
+            Games are almost every Sunday night for approximately 16 weeks with a two or three week playoff round to determine a champion. <br>
+            Games are played at either Hillel Torah or Fairview Middle School in Skokie.  <br>
+            There is one 10 O'clock game each week.
+
         </p>
         <p>
           If you haven't played in the league, the basic system is as follows:
@@ -46,7 +49,9 @@
 </p>
 
       </div>
-      <iframe src="https://docs.google.com/forms/d/1BT0AqM73yR-pg47nbgkCAnU0aYlMX0IqxppQtd_kwMY/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <div class="embed-responsive">
+        <iframe src="https://docs.google.com/forms/d/1BT0AqM73yR-pg47nbgkCAnU0aYlMX0IqxppQtd_kwMY/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      </div>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
   </body>
 </html>
