more style changes

--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <title>ABL</title>
   </head>
-  <body>
+  <body class="container">
       <div class="container-fluid">
-      <p><b>This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.</b></p>
+        <p>
+          <b>
+            <h2>
+              This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
+            </h2>
+        </b>
+        </p>
 <p>The first games are scheduled for Sunday, November 1st.</p>
 <p>Games are almost every Sunday night for approximately 16 weeks with a two or three week playoff round to determine a champion. </p>
 <p>Games are played at either Hillel Torah or Fairview Middle School in Skokie. </p>
 <p>There is also one 10 O'clock game each week.</p>
 <p>If you haven't played in the league, the basic system is as follows:</p>
-<ul class="small"><li>There are 16 teams, consisting of 7 players each led by a captain.</li></ul>
-<li>There is a draft held before the beginning of each season with 6 rounds.</li>
-<li>You will be notified by the captain who drafts you, the name of your team so you can check the calendar posted on our website for your game's times each week.</li>
-<li>(Each team plays 14 games and gets two bye weeks).</li>
-<li>If you would like to play, but know that there are a number of Sunday nights that you will not be available, please email the commissioner at the email address below, because captains need to know this information before the draft.</li></ul>
+<ul>
+  <li>There are 16 teams, consisting of 7 players each led by a captain.</li>
+  <li>There is a draft held before the beginning of each season with 6 rounds.</li>
+  <li>You will be notified by the captain who drafts you, the name of your team so you can check the calendar posted on our website for your game's times each week.</li>
+  <li>(Each team plays 14 games and gets two bye weeks).</li>
+  <li>If you would like to play, but know that there are a number of Sunday nights that you will not be available, please email the commissioner at the email address below, because captains need to know this information before the draft.</li></ul>
+</ul>
 <p><b>There are a few captain spots open. 
 If you are interested in being a captain please email the commissioner.</b></p>
 <p>The fee to play is $160.00. 
