--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   </head>
   <body class="container-fluid">
       <div class="container-fluid">
-        <p>
-          <b>
-            <h2>
-              This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
+            <h2 class="text-center">
+              <b>
+                This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
+              </b>
             </h2>
-        </b>
-        </p>
         <div class="row">
-          <div class="col-md-6">
-            <p>The first games are scheduled for Sunday, November 1st.</p>
+          <div class="col-md-8">
+            <p>The first games are scheduled for <strong>Sunday, November 1st</strong>.</p>
             <p>Games are almost every Sunday night for approximately 16 weeks with a two or three week playoff round to determine a champion. </p>
             <p>Games are played at either Hillel Torah or Fairview Middle School in Skokie. </p>
             <p>There is also one 10 O'clock game each week.</p>
@@ -28,8 +26,8 @@
               <li>(Each team plays 14 games and gets two bye weeks).</li>
               <li>If you would like to play, but know that there are a number of Sunday nights that you will not be available, please email the commissioner at the email address below, because captains need to know this information before the draft.</li></ul>
             </ul>
-            <p><b>There are a few captain spots open. 
-            If you are interested in being a captain please email the commissioner.</b></p>
+            <p><strong>There are a few captain spots open. 
+            If you are interested in being a captain please email the commissioner.</strong></p>
             <p>The fee to play is $160.00. 
             Jerseys are provided. 
             Games are officiated by professional referees.</p>
@@ -46,7 +44,7 @@
               </ol>
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
             <table>
@@ -56,7 +54,7 @@
             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynow_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </form>
-            <iframe src="https://docs.google.com/forms/d/1BT0AqM73yR-pg47nbgkCAnU0aYlMX0IqxppQtd_kwMY/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            <iframe src="https://docs.google.com/forms/d/1BT0AqM73yR-pg47nbgkCAnU0aYlMX0IqxppQtd_kwMY/viewform?embedded=true" width="450" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
           </div>
         </div>
 
