added charity line

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 
             <h3>Registration</h3>
             <p>The fee to play is $160.00.</p>
-            <p>
-              Proceeds go to pay for Jersys, rent locations, pay professional refferees and other expenses.
-            </p>
+            <p>Proceeds go to pay for Jersys, rent locations, pay professional refferees and other expenses.</p>
+            <p>Extra funds at the end of the year go to charity.</p>
             <p>
               To Register:
               <ol>
