--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
             <h3>
               ABL League Basics
             </h3>
-            <p>There are 16 teams, consisting of 7 players each led by a captain.</p>
+            <p>There are 16 teams, each consisting of 7 players, and each led by a captain.</p>
             <p>There is a draft held before the beginning of each season with 6 rounds.</p>
-            <p>You will be notified by the captain who drafts you, the name of your team so you can check the calendar posted on our website for your game's times each week.</p>
+            <p>The captain who drafts you will notify you of the name of your team so you can check the calendar posted on our website for your game times each week.</p>
             <p>Each team plays 14 games and gets two bye weeks.</p>
 
             <h3>
               Schedule
             </h3>
-            <p>The first games are scheduled for <strong>Sunday, November 1st</strong>.</p>
-            <p>Games are almost every Sunday night for approximately 16 weeks with a two or three week playoff round to determine a champion. </p>
+            <p>The first games are tentatively scheduled for <strong>Sunday, November 1st</strong>.</p>
+            <p>Games are almost every Sunday night for approximately 16 weeks with a 2-3 week playoff round to determine a champion. </p>
             <p>Games are played at either Hillel Torah or Fairview Middle School in Skokie. </p>
-            <p>There is also one 10 O'clock game each week.</p>
+            <p>There is also one 10 o'clock game each week.</p>
             <p>
               If you would like to play, but know that there are a number of Sunday nights that you will not be available, please email the commissioner at the email address below, because captains need to know this information before the draft.
             </p>
 
             <h3>Registration</h3>
             <p>The fee to play is $160.00.</p>
-            <p>Proceeds go to pay for Jersys, rent locations, pay professional refferees and other expenses.</p>
+            <p>Proceeds go to pay for jerseys, to rent locations, to pay professional referees, and other expenses.</p>
             <p>Extra funds at the end of the year go to charity.</p>
             <p>
               To Register:
@@ -48,9 +48,9 @@
             </p>
 
             <p><strong>There are a few captain spots open. 
-            If you are interested in being a captain please email the commissioner.</strong></p>
+            If you are interested in being a captain, please email the commissioner.</strong></p>
             <p>For all questions email: <a href="mailto:commissioner@yeshivaabl.com"> commissioner@yeshivaabl.com</a></p>
-            <p>Thank You and have an enjoyable year.</p>
+            <p>Thank you and have an enjoyable year.</p>
 
 
           </div>
