--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <div class="panel panel-success">
               <div class="panel-heading"><h4>Step 1. Pay Below</h4></div>
                 <div class="panel-body">
+                  Our paypal does not yet have support for credit card payments. 
+                  You must have a paypal account to pay. 
+                  We are working on supporting credit card payments.
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <table>
