--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </h2>
         <div class="row">
           <div class="col-md-8">
-            <h3>UPDATE: THE FIRST LEAGUE GAMES WILL BE NOV 8 OPEN GYMS ARE OCT 18 ANE OCT 25. THE LEAGUE DRAFT IS NOV 1ST.</h3>
+            <h3 style="color:red;">UPDATE: THE FIRST LEAGUE GAMES WILL BE NOV 8 OPEN GYMS ARE OCT 18 AND OCT 25. THE LEAGUE DRAFT IS NOV 1ST.</h3>
             <p>If you haven't played in the league before, please read the info below carefully.</p>
             <h3>
               ABL League Basics
