--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3 style="color:red;">UPDATE: THE FIRST LEAGUE GAMES WILL BE NOV 8 OPEN GYMS ARE OCT 18 AND OCT 25. THE LEAGUE DRAFT IS NOV 1ST.</h3>
-            <p>If you haven't played in the league before, please read the info below carefully.</p>
+            <h2><i></i>If you haven't played in the league before, please read the info below carefully.</i></h2>
             <h3>
               ABL League Basics
             </h3>
@@ -61,7 +61,8 @@
                 <div class="panel-body">
                   Our paypal does not yet have support for credit card payments. 
                   You must have a paypal account to pay. 
-                  We are working on supporting credit card payments.
+                  We are working on supporting credit card payments. <br>
+                  If you want to pay by check, please email <a href="mailto:commissioner@yeshivaabl.com"> commissioner@yeshivaabl.com</a>.
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <table>
