--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="container-fluid">
             <h2 class="text-center">
               <b>
-                This is the temporary registration site for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
+                 Registration is now <u>closed</u> for the Hebrew Theological College Alumni Basketball League for the 2015-2016 season.
               </b>
             </h2>
         <div class="row">
