--- a/results.html
+++ b/results.html
@@ -1,7 +1,7 @@
 
 <html dir="RTL" lang"HE">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=Windows-1255">
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-8">
         <style>
             body {font-family:David;color:#000000;background-color:#FFFFFF;margin:1.5em;}
             p {font-size:165%;text-align:justify;}
